- Add support for byte Range Requests, see pull request ``#978``.
- Use modern cryptographic defaults in the dev servers ``#1004``.
- the post() method of the test client now accept file object through the data
  parameter.
- Color run_simple's terminal output based on HTTP codes ``#1013``.
- Fix self-XSS in debugger console, see ``#1031``.
- Fix IPython 5.x shell support, see ``#1033``.

Version 0.11.16
---------------

- werkzeug.serving: set CONTENT_TYPE / CONTENT_LENGTH if only they're provided by the client

Version 0.11.15
---------------

Released on December 30th 2016.

- Bugfix for the bugfix in the previous release.

Version 0.11.14
---------------

Released on December 30th 2016.

- Check if platform can fork before importing ``ForkingMixIn``, raise exception
  when creating ``ForkingWSGIServer`` on such a platform, see PR ``#999``.

Version 0.11.13
---------------

Released on December 26th 2016.

- Correct fix for the reloader issuer on certain Windows installations.

Version 0.11.12
---------------

Released on December 26th 2016.

- Fix more bugs in multidicts regarding empty lists. See ``#1000``.
- Add some docstrings to some `EnvironBuilder` properties that were previously
  unintentionally missing.
- Added a workaround for the reloader on windows.

Version 0.11.11
---------------

Released on August 31st 2016.

- Fix JSONRequestMixin for Python3. See #731
- Fix broken string handling in test client when passing integers. See #852
- Fix a bug in ``parse_options_header`` where an invalid content type
  starting with comma or semi-colon would result in an invalid return value,
  see issue ``#995``.
- Fix a bug in multidicts when passing empty lists as values, see issue
  ``#979``.
- Fix a security issue that allows XSS on the Werkzeug debugger. See ``#1001``.

Version 0.11.10
---------------

Released on May 24th 2016.

- Fixed a bug that occurs when running on Python 2.6 and using a broken locale.
  See pull request #912.